--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build-only": "next build",
     "start": "next start"
   },
   "dependencies": {
@@ -15,7 +14,7 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "markdown-it": "^14.0.0",
-    "next": "14.0.4",
+    "next": "14.2.0-canary.66",
     "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,16 +24,14 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.3",
-    "swr": "^2.2.4"
-  },
-  "devDependencies": {
+    "swr": "^2.2.4",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.10.2",
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.18",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.7",
+    "@types/node": "20.11.17",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   }
 }
