--- a/package.json
+++ b/package.json
@@ -6,32 +6,32 @@
     "start": "next start"
   },
   "dependencies": {
-    "@vercel/edge-config": "^0.4.1",
-    "@vercel/og": "^0.6.1",
-    "clsx": "^2.0.0",
+    "@vercel/edge-config": "^1.4.0",
+    "@vercel/og": "^0.6.4",
+    "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
-    "date-fns": "^3.0.0",
-    "dotenv": "^16.3.1",
-    "framer-motion": "^10.16.16",
-    "markdown-it": "^14.0.0",
-    "next": "14.2.0-canary.66",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.12.0",
+    "markdown-it": "^14.1.0",
+    "next": "15.0.3",
     "next-contentlayer": "^0.3.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-wrap-balancer": "^1.0.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.10.0",
-    "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1",
-    "shiki": "^0.14.3",
-    "swr": "^2.2.4",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.11.17",
-    "@types/react": "18.2.55",
-    "@types/react-dom": "18.2.19",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-wrap-balancer": "^1.1.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "shiki": "^1.24.0",
+    "swr": "^2.2.5",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "22.10.1",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "5.7.2"
   }
 }
