--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:content": "contentlayer2 build",
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "22.10.1",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "@vercel/edge-config": "^1.4.0",
     "@vercel/og": "^0.6.4",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
-    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.4.6",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.12.0",
     "markdown-it": "^14.1.0",
     "next": "15.0.3",
-    "next-contentlayer": "^0.3.4",
+    "next-contentlayer2": "^0.4.6",
+    "postcss": "^8.4.49",
+    "raw-loader": "^4.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-wrap-balancer": "^1.1.1",
@@ -25,12 +33,6 @@
     "remark-gfm": "^4.0.0",
     "shiki": "^1.24.0",
     "swr": "^2.2.5",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "22.10.1",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "5.7.2"
   }
