--- a/package.json
+++ b/package.json
@@ -1,39 +1,28 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "build:content": "contentlayer2 build",
-    "start": "next start"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "start": "astro preview --host 0.0.0.0 --port 3000"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.0",
+    "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "22.10.1",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "@vercel/edge-config": "^1.4.0",
-    "@vercel/og": "^0.6.4",
+    "@types/node": "^22.15.30",
     "autoprefixer": "^10.4.20",
-    "clsx": "^2.1.1",
-    "contentlayer2": "^0.4.6",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.12.0",
+    "astro": "^5.12.8",
     "markdown-it": "^14.1.0",
-    "next": "15.0.3",
-    "next-contentlayer2": "^0.4.6",
     "postcss": "^8.4.49",
-    "raw-loader": "^4.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-wrap-balancer": "^1.1.1",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "shiki": "^1.24.0",
-    "swr": "^2.2.5",
     "tailwindcss": "^3.4.15",
-    "typescript": "5.7.2"
+    "typescript": "^5.8.3"
   }
 }
